--- a/app/components/ui/item.html
+++ b/app/components/ui/item.html
@@ -1,19 +1,20 @@
 <div class="animate-switch-container" ng-switch on="item.type">
-
 	<div class="animate-switch" ng-switch-when="gene.ligand">
 	  <ul  class="list-unstyled">
-	    <li>Ligand Gene: {{item.name}}</li>
+	    <li>Ligand: {{item.name}}</li>
 	  </ul>
 	  <ul class="list-unstyled">
+	  	<li>Paired receptors: <span expression-list="item.receptors" key="id" array="data.genes"></span></li>
       	<li ng-repeat="(k,v) in item.meta">{{k}}: {{v}}</li>
       </ul>
 	</div>
 
 	<div class="animate-switch" ng-switch-when="gene.receptor">
 	  <ul  class="list-unstyled">
-	    <li>Receptor Gene: {{item.name}}</li>
+	    <li>Receptor: {{item.name}}</li>
 	  </ul>
 	  <ul class="list-unstyled">
+	  	<li>Paired ligands: <span expression-list="item.ligands" key="id" array="data.genes"></span></li>
       	<li ng-repeat="(k,v) in item.meta">{{k}}: {{v}}</li>
       </ul>
 	</div>
@@ -21,16 +22,19 @@
 	<div class="animate-switch" ng-switch-when="node">
 	  <ul  class="list-unstyled">
 	    <li>Sample cell: {{item.name}}</li>
-	    <li>{{item.ligands.length > 0 ? 'Sum of ' : ''}}Ligand expression: {{item.values[0] | number:2}}</li>
-	    <li ng-if="item.ligands.length > 0">Ligands: <span gene-list="item.ligands"></span></li>
-	    <li>{{item.receptors.length > 0 ? 'Sum of ' : ''}}Receptor expression: {{item.values[1] | number:2}}
-	    <li ng-if="item.receptors.length > 0">Receptors: <span gene-list="item.receptors"></span></li>
+	    <li>{{item._ligands.length > 0 ? 'Sum of ' : ''}}Ligand expression: {{item.values[0] | number:2}}</li>
+	    <li ng-if="item._ligands.length > 0">Ligands: <span expression-list="item._ligands"  key="id" array="data.genes"></span></li>
+	    <li>{{item._receptors.length > 0 ? 'Sum of ' : ''}}Receptor expression: {{item.values[1] | number:2}}
+	    <li ng-if="item._receptors.length > 0">Receptors: <span expression-list="item._receptors"  key="id" array="data.genes"></span></li>
 	  </ul>
-	  <ul  class="list-unstyled">  
-	    <li ng-if="item.expr.length > 0">Top genes: <span gene-list="item.expr"></span></li>
+	  <ul  class="list-unstyled">
+	  	<!-- li ng-if="item.expr.length > 0">Ligands: <span expression-list="item.expr | filter : { gene: { type: 'Ligand' } } | limitTo : 5"></span></li>
+	    <li ng-if="item.expr.length > 0">Receptors: <span expression-list="item.expr | filter : { gene: { type: 'Receptor' } } | limitTo : 5"></span></li -->
+	    <li ng-if="item.ligands.length > 0">Ligands: <span expression-list="item.ligands"  key="id" array="data.genes"></span></li>
+	    <li ng-if="item.receptors.length > 0">Receptors: <span expression-list="item.receptors"  key="id" array="data.genes"></span></li>
 	    <li><ul class="list-unstyled">
 	      <li ng-repeat="(k,v) in item.meta">{{k}}: {{v}}</li>
-	    </ul></li>           
+	    </ul></li>        
 	  </ul>
 	</div>
 
