--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -35,19 +35,23 @@
 
   <div class="new-tip bg-info" ng-cloak ng-show="graphData.nodes.length > 0">
     <ul class="list-unstyled">
+      <li>Samples: {{selected.cells.length}} / {{data.cells.length}}</li>
+      <li>Genes: {{selected.genes.length}} / {{data.genes.length}}</li>
       <li>Pairs: {{selected.pairs.length}} / {{data.pairs.length}}</li>
+    </ul>
+    <ul class="list-unstyled">
       <li>Nodes: {{graphData.nodes.length}} / {{graphData.nodeCount}}</li>
       <li>Edges: {{graphData.edges.length}} / {{graphData.edgeCount}}</li>
     </ul>
   </div>
 
   <div class="new-tip bg-info hover" ng-cloak ng-show="graphData.hoverItem">
-    <div graph-item="graphData.hoverItem"></div>
+    <div graph-item="graphData.hoverItem" data="data"></div>
   </div>
 
   <div class="new-tip bg-danger" ng-repeat="item in graphData.nodes | filter : { fixed: true }">
     <button type="button" class="close" aria-hidden="true" ng-click="item.fixed = false; graph.update()">&times;</button>
-    <div graph-item="item"></div>
+    <div graph-item="item" data="data"></div>
   </div>
 
 </div>
