--- a/app/components/force/panel.html
+++ b/app/components/force/panel.html
@@ -7,23 +7,26 @@
   <accordion-group heading="Node Filters" is-open="panelState.nodeFilters" ng-class="{'collapsed': !panelState.nodeFilters}">
 
     <div panel heading="Samples" is-open="panelState.cells">
-      <div panel-label>
-        {{selectedIds.cells.length}} / {{data.cells.length}}
+      <div panel-label >
+        {{selectedIds.cells.length}} / <span bindonce="data.cells" bo-text="data.cells.length"></span>
       </div>
-      <div
-            multi-select
-            input-model="data.cells"
-            button-label="name"
-            item-label="name"
-            tick-property="ticked"
-            max-labels="1" >
-      </div>
+
+        <div
+              multi-select
+              input-model="data.cells"
+              button-label="name"
+              item-label="name"
+              tick-property="ticked"
+              max-labels="1"
+              isDisabled="!panelState.cells">
+        </div>    
+
     </div>
 
     <p />
-    <div panel heading="Genes" is-open="panelState.genes">
+    <div panel heading="Genes" x-is-open="panelState.genes">
       <div panel-label>
-        {{selectedIds.genes.length}} / {{data.genes.length}}
+        {{selectedIds.genes.length}} / <span bindonce="data.genes" bo-text="data.genes.length"></span>
       </div>
       <div
             multi-select
@@ -31,7 +34,9 @@
             button-label="name"
             item-label="name description"
             tick-property="ticked"
-            max-labels="1" >
+            max-labels="1"
+            isDisabled="!panelState.genes"
+            ng-if="panelState.genes">
       </div>
     </div>
 
@@ -39,9 +44,9 @@
     <div panel heading="Ligand cutoff" is-open="panelState.receptorRank" label="top {{options.ligandRankFilter | percentage}}" title="Showing only top {{options.ligandRankFilter | percentage}} of ligands">
       <div hc-slider ng-model="options.ligandRankFilter" max="1" min="0" step="0.01"></div>
     </div>
-    
+
     <p />
-    <div panel heading="Receptor rank" is-open="panelState.ligandRank" label="top {{options.receptorRankFilter | percentage}}" title="Showing only top {{options.receptorRankFilter | percentage}}% of receptors">
+    <div panel heading="Receptor rank" is-open="panelState.ligandRank" label="top {{options.receptorRankFilter | percentage}}" title="Showing only top {{options.receptorRankFilter | percentage}} of receptors">
       <div hc-slider ng-model="options.receptorRankFilter" max="1" min="0" step="0.01"></div>
     </div>
 
@@ -51,7 +56,7 @@
 
     <div panel heading="Ligand - Receptor Pairs" is-open="panelState.pairs">
       <div panel-label class="ng-cloak">
-        {{selectedIds.pairs.length}} / {{data.pairs.length}}
+        {{selectedIds.pairs.length}} / <span bindonce="data.pairs" bo-text="data.pairs.length"></span>
       </div>
       <div
             multi-select
@@ -59,7 +64,8 @@
             button-label="name"
             item-label="name"
             tick-property="ticked"
-            max-labels="1" >
+            max-labels="1"
+            isDisabled="!panelState.pairs">
       </div>
     </div>
 
@@ -114,7 +120,3 @@
   </accordion-group>
 
 </accordion>
-
-
-
-
