--- a/app/components/ui/panel.html
+++ b/app/components/ui/panel.html
@@ -1,6 +1,10 @@
-<div ng-click="toggleOpen()" class="ng-scope">
-  <a href=""><span bindonce bo-text="heading"></span>  <b class="caret collapsed" ng-class="{'collapsed': !isOpen}"></b></a>
-  <div class="pull-right small" panel-transclude="label">{{label}}</div>
+<div ng-click="toggleOpen()">
+  <a href="">
+  	<span ng-bind="heading"></span>
+  	<b class="caret collapsed" ng-class="{'collapsed': !isOpen}"></b>
+  </a>
+  <div class="pull-right small" ng-bind="label" ng-cloak>
+  </div>
 </div>
-<div collapse="!isOpen" ng-transclude ng-if="isOpen">
+<div class="animate-fade" ng-if="ngIf" ng-transclude>
 </div>
