--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -30,18 +30,9 @@
 
 </div>
 
-<div class="panel-right col-md-3">
+<div class="panel-right col-xs-3">
 
-  <div ng-class="panelState.info ? 'col-md-1' : ''" style="padding: 5px; min-width: 40px;">
-    <button type="button" ng-click="panelState.info = !panelState.info" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-  </div>
-
-  <div class="col-md-11" ng-if="panelState.info">
+  <div class="col-xs-10 animate-fade pull-right" ng-if="panelState.info">
     <div class="new-tip bg-info" ng-cloak ng-show="graphData.nodes.length > 0">
       <ul class="list-unstyled">
         <li>Samples: <span ng-bind="selectedIds.cells.length"></span> / <span bindonce="data.cells" bo-text="data.cells.length"></span></li>
@@ -66,6 +57,15 @@
       <button type="button" class="close" aria-hidden="true" ng-click="revoveSelectedItem($index)">&times;</button>
       <div graph-item="item" data="data"></div>
     </div>
+  </div>
+
+  <div ng-class="" style="padding: 5px; min-width: 40px;">
+    <button type="button" ng-click="panelState.info = !panelState.info" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
   </div>
 
   <!-- button type="button" class="navbar-toggle" title="Click to show stats" style="display: inline-block; position: relative;">
