--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -1,7 +1,7 @@
 
 <div snap-drawers>
   <div snap-drawer id="ui">
-    <div ng-include="'components/force/panel.html'"></div>
+    <div ng-include="'components/ui/left-panel.html'"></div>
   </div>
 </div>
 
@@ -45,7 +45,7 @@
         <li>Edges: <span ng-bind="graphData._edges.length"></span> / <span ng-bind="graphData.edges.length"></span></li>
 
       </ul>
-    </div>    
+    </div>
 
     <div growl></div>
 
@@ -76,7 +76,7 @@
     <span class="icon-bar"></span>
   </button -->
 
- 
+
 
 
 
