--- a/app/components/charts/chart.css
+++ b/app/components/charts/chart.css
@@ -1,17 +1,17 @@
   /* #vis { text-align: center; width: 700px;}
   #vis svg { width: 100%; height: 500px; } */
 
-#vis svg { 
+#vis svg {
   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
   width: 100%;
   height: 100%;
-  
+
   text-rendering: optimizeLegibility;
   shape-rendering: geometricPrecision;
-  
+
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -41,9 +41,13 @@
   kerning: -3; */
 }
 
+svg .label {
+  cursor: pointer;
+}
+
 svg.labels .node text {
   display: inherit;
-} 
+}
 
 .node:hover text, .node.hover text, .node.fixed text {
   font-size: 18px !important;
@@ -59,6 +63,7 @@ svg.labels .node text {
   stroke: #666;
   stroke-width: 1.5px;
   opacity: 0.6;
+  cursor: pointer;
 }
 
 svg.fixed .link {
@@ -77,7 +82,7 @@ svg.hover .link.hover, .link:hover {
 }
 
 svg.hover .node {
-  opacity: 0.1 !important;
+  opacity: 0.2 !important;
 }
 
 svg.hover .node.hover, svg.hover .node:hover {
@@ -146,4 +151,3 @@ svg.hover .node.hover, svg.hover .node:hover {
   width: 400px !important;
   left: auto !important;
 }
-
